; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ata/chipsets/extr_ata-micron.c_ata_micron_probe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ata/chipsets/extr_ata-micron.c_ata_micron_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_pci_controller = type { i32 }

@ATA_MICRON_RZ1000 = common dso_local global i64 0, align 8
@ATA_MICRON_RZ1001 = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [59 x i8] c"RZ 100? ATA controller !WARNING! data loss/corruption risk\00", align 1
@ata_generic_chipinit = common dso_local global i32 0, align 4
@BUS_PROBE_LOW_PRIORITY = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ata_micron_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ata_micron_probe(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.ata_pci_controller*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call %struct.ata_pci_controller* @device_get_softc(i32 %5)
  store %struct.ata_pci_controller* %6, %struct.ata_pci_controller** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @pci_get_devid(i32 %7)
  %9 = load i64, i64* @ATA_MICRON_RZ1000, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %16, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = call i64 @pci_get_devid(i32 %12)
  %14 = load i64, i64* @ATA_MICRON_RZ1001, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %23

16:                                               ; preds = %11, %1
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @device_set_desc(i32 %17, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* @ata_generic_chipinit, align 4
  %20 = load %struct.ata_pci_controller*, %struct.ata_pci_controller** %4, align 8
  %21 = getelementptr inbounds %struct.ata_pci_controller, %struct.ata_pci_controller* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load i32, i32* @BUS_PROBE_LOW_PRIORITY, align 4
  store i32 %22, i32* %2, align 4
  br label %25

23:                                               ; preds = %11
  %24 = load i32, i32* @ENXIO, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %16
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local %struct.ata_pci_controller* @device_get_softc(i32) #1

declare dso_local i64 @pci_get_devid(i32) #1

declare dso_local i32 @device_set_desc(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
